exercises/oidc/oidc-consumer.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin-demo
