exercises/oidc/httpbin-ingress-oidc-acl.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin-demo
---
apiVersion: v1
kind: Service
metadata:
  name: oidc-service
  namespace: httpbin-demo
  annotations:
    konghq.com/path: "/anything"
    konghq.com/plugins: "httpbin-oidc,httpbin-acl"
spec:
  type: ExternalName
  externalName: httpbin.default.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oidc-route
  namespace: httpbin-demo
  annotations: 
    konghq.com/strip-path: "true"
    konghq.com/plugins: "httpbin-oidc,httpbin-acl"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /oidc
        pathType: ImplementationSpecific
        backend:
          service:
            name: oidc-service
            port:
              number: 80
