exercises/oidc/httpbin-ingress-oidc-rate-limiting.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-oidc
  namespace: oidc
  annotations: 
    konghq.com/strip-path: "false"
    konghq.com/plugins: "httpbin-oidc,httpbin-rate-limiting"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /headers
        pathType: ImplementationSpecific
        backend:
          service:
            name: httpbin
            port:
              number: 80
